# OpeGL-Test

./: .cmake-format.json  .gitmodules  CMakeLists.txt  README.md  fragment.glsl  vertex.glsl
assets/: fragment.glsl
include/: Application.hpp  ImGui.hpp  Image.hpp  Sound.hpp  Utilities.hpp  Window.hpp  format.hpp
include/GLFW/: Window.hpp
include/ImGui/: Window.hpp
include/OpenGL/: BindGuard.hpp  Buffer.hpp  Object.hpp  Shader.hpp  ShaderProgram.hpp  ShaderProgramUniforms.hpp  ShaderProgramUniforms.inl  Texture.hpp  VertexArray.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Application.cpp  ApplicationLogic.cpp  Image.cpp  Sound.cpp  Window.cpp  WindowDefaults.cpp  WindowEvents.cpp  main.cpp
src/GLFW/: Window.cpp  WindowDefaults.cpp  WindowEvents.cpp
src/ImGui/: OpenGL.cpp  SFML.cpp  Window.cpp
src/OpenGL/: Buffer.cpp  Object.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp
src/Utilities/: ParseINI.cpp
